separate encrypted and plaintext api and streamline usage (#16)
* separate encrypted and plaintext api and streamline usage
* optimise encrypted and plaintext storages
* lower allocs per operating by using syscalls instead of fascades
* better fd flags
* use syscall to obtain fd directly

--- a/.github/workflows/health.yml
+++ b/.github/workflows/health.yml
@@ -34,4 +34,8 @@ jobs:
 
     - name: Unit Test
       run:  |
-        go test -v ./... -timeout=10s
+        GOMAXPROCS=1 go test -v ./... -timeout=2m
+
+    - name: Benchmarck Test
+      run:  |
+        GOMAXPROCS=1 go test -v ./... -run=^$ -bench=. -benchmem -timeout=2m
