--- a/.dev/docker-compose.yml
+++ b/.dev/docker-compose.yml
@@ -10,20 +10,22 @@ services:
     image: docker.io/jancajthaml/go
     tty: true
     volumes:
-      - .:/project
+      - ..:/project
     working_dir: /project
     environment:
       - GOOS
       - GOARCH
       - GOPATH=/go
       - COMPOSE_PROJECT_NAME
-    entrypoint: ["go"]
+    entrypoint:
+      - go
 
   # -------------------------------------------------------------------------- #
 
   sync:
     <<: *go
-    entrypoint: ["/project/dev/lifecycle/sync"]
+    entrypoint:
+      - /project/.dev/lifecycle/sync
 
   # -------------------------------------------------------------------------- #
 
@@ -36,18 +38,21 @@ services:
 
   lint:
     <<: *go
-    entrypoint: ["/project/dev/lifecycle/lint"]
+    entrypoint:
+      - /project/.dev/lifecycle/lint
 
   # -------------------------------------------------------------------------- #
 
   sec:
     <<: *go
-    entrypoint: ["/project/dev/lifecycle/sec"]
+    entrypoint:
+      - /project/.dev/lifecycle/sec
 
   # -------------------------------------------------------------------------- #
 
   test:
     <<: *go
-    entrypoint: ["/project/dev/lifecycle/test"]
+    entrypoint:
+      - /project/dev/lifecycle/test
 
 # ---------------------------------------------------------------------------- #
